Import of NOBULL/perl5lib-1.02.tar.gz from CPAN.
gitpan-cpan-distribution: perl5lib
gitpan-cpan-version:      1.02
gitpan-cpan-path:         NOBULL/perl5lib-1.02.tar.gz
gitpan-cpan-author:       NOBULL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This package provides an alterate interface to Perl's tied variables.
+This package allows PERL5LIB to be honoured in taint mode.
 
 After unpacking the distribution, to install this module type
  
